--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>This page demonstrate that we use the tables, forms and images and various HTML elements.</p>
     <hr>
     <h2>Contact Form</h2>
-    <form action="">
+    <form action="" id="contact">
         <label for="">Name</label>
         <input type="text" name="First Name" id="" placeholder="Enter Your Name">
 <br>
@@ -47,23 +47,64 @@
         <th>Science</th>
     </tr>
     <tr>
-        <td ><img src="profile1.png" alt="John"></td>
+        <td ><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM8LrGjiUDcvYjUMk7jUJJZo0kK4Y4NzKxmQ&s" alt="John" height="140"></td>
         <td width="140px">John</td>
         <td>85</td>
         <td>92</td>
     </tr>
     <tr>
-        <td><img src="profile2.png" alt="Emma"></td>
+        <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM8LrGjiUDcvYjUMk7jUJJZo0kK4Y4NzKxmQ&s" alt="Emma" height="140"></td>
         <td>Emma</td>
         <td>78</td>
         <td>88</td>
     </tr>
     <tr>
-        <td><img src="profile3.png" alt="Michael"></td>
+        <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM8LrGjiUDcvYjUMk7jUJJZo0kK4Y4NzKxmQ&s" alt="Michael" height="140"></td>
         <td>Michael</td>
         <td>90</td>
         <td>95</td>
     </tr>
 </table>
+
+<hr>
+<h2>Anchor Links</h2>
+<p>Use following links to navigate:</p>
+<br>
+<a href="contact">Contact</a>
+<br>
+<a href="https://www.google.co.uk/" target="_blank">Google</a>
+<hr>
+<h2>Subscript and Superscript</h2>
+<p>Chemical formulas often use subscript, Such as H <sub>2</sub>O for water . In physics, the equation E=mc <sup>2</sup> is a famous example.</p>
+<hr>
+
+
+<h2>Lists</h2>
+<h3>Order list-Faviroute Fruits</h3>
+<ol>
+    <li>Mango</li>
+    <li>Apple</li>
+    <li>Strawberry</li>
+</ol>
+
+
+<h3>Un-ordered list-Hobbies</h3>
+<ul>
+    <li>Outing</li>
+    <li>Gaming</li>
+    <li>Coding</li>
+</ul>
+
+
+<head>
+
+    <h2>Images</h2>
+<p>Here are some sample images</p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1zwhySGCEBxRRFYIcQgvOLOpRGqrT3d7Qng&s" alt="">
+
+    <br>
+
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SRRmhH4X5N2e4QalcoxVbzYsD44C-sQv-w&s" alt="">
+</head>
 </body>
 </html>
